--- a/res/values/cm_strings.xml
+++ b/res/values/cm_strings.xml
@@ -49,6 +49,23 @@
     <string name="call_stats_reset_filter">Reset time range</string>
     <string name="call_stats_sort_by_duration">Sort by call duration</string>
     <string name="call_stats_sort_by_count">Sort by call count</string>
+    
+    <!--  Localized dialer buttons.
+          In English, we don't need a secondary row, so all values are empty.
+          Change these values depending on your language requirements.
+    -->
+    <string name="dialpad_0_2_letters" translatable="false"></string>
+    <string name="dialpad_1_2_letters" translatable="false"></string>
+    <string name="dialpad_2_2_letters"></string>
+    <string name="dialpad_3_2_letters"></string>
+    <string name="dialpad_4_2_letters"></string>
+    <string name="dialpad_5_2_letters"></string>
+    <string name="dialpad_6_2_letters"></string>
+    <string name="dialpad_7_2_letters"></string>
+    <string name="dialpad_8_2_letters"></string>
+    <string name="dialpad_9_2_letters"></string>
+    <string name="dialpad_star_2_letters" translatable="false"></string>
+    <string name="dialpad_pound_2_letters" translatable="false"></string>
 
     <!-- Forward lookup -->
     <string name="nearby_places">Nearby places</string>
